# http

./: CMakeLists.txt  README.md  main.cpp
.github/ISSUE_TEMPLATE/: development-request.md
.github/workflows/: cmake-build.yml  codeql.yml
lib/http_core/: CMakeLists.txt
lib/http_core/include/: kernel.h  socket.h  task.h
lib/http_core/include/core/: http.h  kernel.h
lib/http_core/include/core/net/: socket.h
lib/http_core/include/core/sys/: task.h
lib/http_core/src/: http.c  socket.c  tasks.c
lib/http_sdk/: CMakeLists.txt
lib/http_sdk/include/: Application.h  WebApplication.h
lib/http_sdk/include/http/: Configuration.h  WebApplication.h
lib/http_sdk/src/: ApplicationConfiguration.cpp  ApplicationConfiguration.h  Logger.cpp  Logger.h  WebApplication.cpp  WebApplication.h
